--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   firebase_auth: ^4.6.0
   cloud_firestore: ^4.7.0
   bubble: ^1.2.1
+  multi_select_flutter: ^4.0.0
+  image_picker: ^0.8.4+2
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
+  firebase_storage: ^11.6.9
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
